# ascii-tables

./: README.md
elixir/: README.md  mix.exs
elixir/lib/: table.ex
elixir/test/: table_test.exs
haskell/: package.yaml  playground.cabal  stack.yaml
haskell/app/: Main.hs
ocaml/: .gitignore  .ocamlformat  dune-project  playground.opam
rust/: Cargo.toml
rust/src/: main.rs
