(lang dune 3.9)

(name playground)

(generate_opam_files true)

(license LICENSE)

(package
 (name playground)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune core))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
